# PyMusic

./: CMakeLists.txt  setup.py
pymusic/: cli.py  gen.py  interval.py  lang.py  main.py  modi.py  player.py  provider.py  rhythm.py  score.py  test.py  test_player.py  tone.py  util.py
pymusic/lang/: duration.py  frequency_tag.py  interval.py
pymusic/lang/scale/: __init__.py  chromatic.py  greek.py  harmonic.py  modern.py  octatonic.py  western.py
pymusic/midi/: instrument.py  parser.py
src/: device.cpp  device.h  instrument.h  main.cpp  message.cpp  message.h  midi.h  player.cpp  player.h  pmain.cpp  pymidi.cpp  pymidi.h
test/: interval.py  parser.py  scale.py  score.py  tests.py  util.py
